# raytracer

./: .gitignore  CMakeLists.txt  README.md
include/camera/: camera.h
include/geometry/: mat.h  ray.h  vec.h
include/geometry/shapes/: sphere.h
include/lights/: light.h
include/log/: log.h
include/raytracer/camera/: camera.h
include/raytracer/geometry/: mat.h  ray.h  transform.h  vec.h  vec3.h
include/raytracer/geometry/shapes/: sphere.h
include/raytracer/lights/: light.h
include/timer/: Stopwatch.h  TickTimer.h
src/: CMakeLists.txt  raytracer.cpp
src/camera/: CMakeLists.txt  camera.cpp
src/geometry/shapes/: CMakeLists.txt  sphere.cpp
src/raytracer/camera/: camera.cpp
src/raytracer/geometry/shapes/: CMakeLists.txt
src/render/: CMakeLists.txt  renderer.cpp  renderer.h
src/scene/: CMakeLists.txt  scene.cpp  scene.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/ui/components/: CMakeLists.txt  SquareToolButton.h
src/ui/components/layouts/: CMakeLists.txt  SquareLayout.cpp  SquareLayout.h
src/ui/components/widgets/: CMakeLists.txt  SquareLayoutWidget.cpp  SquareLayoutWidget.h
src/ui/menu/: CMakeLists.txt  Menu.cpp  Menu.h  MenuWidget.cpp  MenuWidget.h
src/ui/style/: CMakeLists.txt  Colors.h
src/ui/viewport/: CMakeLists.txt  Viewport.cpp  Viewport.h  ViewportWidget.cpp  ViewportWidget.h
ui/: MainWindow.ui
ui/menu/: Menu.ui  MenuWidget.ui
ui/viewport/: Viewport.ui  ViewportWidget.ui
